deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finances-easy-api
  namespace: finances
  labels:
    app: finances-easy-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finances-easy-api
  template:
    metadata:
      labels:
        app: finances-easy-api
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: finances-easy-api-secret
        name: finances-easy-api
        image: rg.fr-par.scw.cloud/alexandre3gomes/finances-easy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: finances-easy-api-svc
  namespace: finances
spec:
  type: ClusterIP
  selector:
    app: finances-easy-api
  ports:
  - port: 8089
    protocol: TCP
    targetPort: 8089
