local-dep.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: finances-easy-api
  name: local-svc
  namespace: finances
spec:
  ports:
  - nodePort: 32651
    port: 8089
    protocol: TCP
    targetPort: 8089
  selector:
    app: finances-easy-api
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer:
    ingress:
    - hostname: localhost
