ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finances-ingress
spec:
  rules:
  - host: 47a43729-0b35-4e05-9b55-b2e57dc9c22a.nodes.k8s.fr-par.scw.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finances-easy-api-ed-deployment
            port:
              number: 8089
